--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-pandas
-matplotlib
-seaborn
-folium
-streamlit 
+pandas==2.2.3
+matplotlib==3.10.0
+seaborn==0.13.2
+folium==0.19.5
+streamlit==1.42.2 
